--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,6 +15,9 @@
         <activity
             android:name=".SegundaTela"
             android:exported="false" />
+        <activity
+            android:name=".CadastroUsuarioActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
